Styles and 404, beginning of about page

--- a/src/components/CustomStyles.astro
+++ b/src/components/CustomStyles.astro
@@ -19,25 +19,49 @@ import '@fontsource-variable/inter';
 // Urbanist
 ---
 
+<!-- 
+/* Background */
+    --color-background: #ECEFEB;
+
+    /* Primary */
+    --color-primary-main: #00526A;
+    --color-primary-dark: #003949;
+    --color-primary-light: #4B7E8B;
+
+    /* Secondary */
+    --color-secondary-main: #B9A400;
+    --color-secondary-light: #E5D966;
+    --color-secondary-dark: #8C7E00;
+
+    /* Accents */
+    --color-accent-magenta: #E2007A;
+    --color-accent-red: #BD0926;
+    --color-accent-lime: #97BE0D;
+    --color-accent-teal: #A6D7D2;
+
+    /* Text */
+    --color-text-primary: #1A1A1A; 
+    --color-text-on-dark: #FFFFFF; 
+-->
 <style is:inline>
   :root {
     --aw-font-sans: 'Inter Variable';
     --aw-font-serif: 'Inter Variable';
     --aw-font-heading: 'Inter Variable';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
-    --aw-color-accent: rgb(109 40 217);
+    --aw-color-primary: rgb(0 82 106);
+    --aw-color-secondary: rgb(0 60 80);
+    --aw-color-accent: rgb(185 164 0);
 
-    --aw-color-text-heading: rgb(0 0 0);
-    --aw-color-text-default: rgb(16 16 16);
-    --aw-color-text-muted: rgb(16 16 16 / 66%);
-    --aw-color-bg-page: rgb(255 255 255);
+    --aw-color-text-heading: rgb(10 10 10);
+    --aw-color-text-default: rgb(30 30 30);
+    --aw-color-text-muted: rgb(30 30 30 / 66%);
+    --aw-color-bg-page: rgb(245 247 243);
 
-    --aw-color-bg-page-dark: rgb(3 6 32);
+    --aw-color-bg-page-dark: rgb(10 25 35);
 
     ::selection {
-      background-color: lavender;
+      background-color: azure;
     }
   }
 
@@ -46,14 +70,14 @@ import '@fontsource-variable/inter';
     --aw-font-serif: 'Inter Variable';
     --aw-font-heading: 'Inter Variable';
 
-    --aw-color-primary: rgb(1 97 239);
-    --aw-color-secondary: rgb(1 84 207);
-    --aw-color-accent: rgb(109 40 217);
+    --aw-color-primary: rgb(0 82 106);
+    --aw-color-secondary: rgb(0 60 80);
+    --aw-color-accent: rgb(185 164 0);
 
-    --aw-color-text-heading: rgb(247, 248, 248);
-    --aw-color-text-default: rgb(229 236 246);
-    --aw-color-text-muted: rgb(229 236 246 / 66%);
-    --aw-color-bg-page: rgb(3 6 32);
+    --aw-color-text-heading: rgb(255, 255, 255);
+    --aw-color-text-default: rgb(220 230 240);
+    --aw-color-text-muted: rgb(200 220 230 / 66%);
+    --aw-color-bg-page: rgb(10 25 35);
 
     ::selection {
       background-color: black;
